--- a/6.0.config
+++ b/6.0.config
@@ -51,3 +51,8 @@ CONFIG_TARGET_ROOTFS_PARTSIZE=1024
 # CONFIG_PACKAGE_xfrm is not set
 # CONFIG_PACKAGE_wireguard-tools is not set
 CONFIG_VSFTPD_USE_UCI_SCRIPTS=y
+
+CONFIG_PACKAGE_luci-app-mwan3=y
+CONFIG_PACKAGE_luci-app-ipsec-vpnd=y
+CONFIG_PACKAGE_luci-app-syncdial=y
+CONFIG_PACKAGE_open-vm-tools=y
